# verman

./: .gitignore  .svminiignore  README.md  VersionManager.spec  activation_generator.py  build.py  build_exe_simple.py  config.py  database.py  dialogs.py  file_manager.py  final_test.py  gui.py  license_manager.py  logger.py  main.py  project_manager.py  pyproject.toml  run_gui.py  todo.md  version_manager.py  vip_dialog.py
.claude/: settings.local.json
data/: vip_records.json
doc/: USER_GUIDE.md
images/: wechat_qr.png.txt
script/: build_exe_simple.py  uninstall_exe_context_menu.py  uninstall_exe_menu.bat
src/svnlite/: __init__.py  main.py
src/svnlite/config/: config_manager.py
src/svnlite/core/: backup_manager.py  commit_manager.py  diff_manager.py  file_tracker.py  models.py  repository_manager.py  rollback_manager.py
src/svnlite/gui/: __init__.py  main_window.py
src/svnlite/storage/: version_storage.py
src/svnlite/utils/: file_utils.py
verman-py/: README.md  VersionManager.spec  app_assets.py  app_info.py  config.py  database.py  dialogs.py  file_manager.py  gui.py  main.py  models.py  project_manager.py  project_paths.py  pyproject.toml  runtime_paths.py  version_manager.py
verman-py/data/: README.md
verman-py/doc/: USER_GUIDE.md  VIP_SETUP_GUIDE.md
verman-py/images/: README.md  alipay_qr.png.txt
verman-py/script/: README.md  build_exe_simple.py  install_exe_context_menu.py  install_exe_menu.bat  打包说明.md
verman-py/tests/: test_database_migration.py  test_main.py  test_project_layout.py  test_runtime_paths.py  test_version_flow.py
verman-rs/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json
verman-rs/assets/: style.css
verman-rs/src/: api.rs  app.rs  main.rs  models.rs
verman-rs/src-tauri/: Cargo.toml  tauri.conf.json
verman-rs/src-tauri/capabilities/: default.json
verman-rs/src-tauri/icons/: icon.icns
verman-rs/src-tauri/src/: main.rs  models.rs  platform.rs  scanner.rs  storage.rs
verman-rs2/: Cargo.toml
verman-rs2/verman-core/: Cargo.toml
verman-rs2/verman-core/src/: lib.rs
verman-rs2/verman-engine/: Cargo.toml
verman-rs2/verman-engine/src/: lib.rs
verman-rs2/verman-platform-windows/: Cargo.toml
verman-rs2/verman-platform-windows/src/: lib.rs
verman-rs2/verman-storage/: Cargo.toml
verman-rs2/verman-storage/src/: lib.rs
verman-rs2/verman-ui/: Cargo.toml  UI_REFACTOR_DRAFT.md
verman-rs2/verman-ui/src/: main.rs
