[package]
name = "verman-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.82"
leptos = { version = "0.8.8", features = ["csr"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
similar = "2.7.0"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.82", features = ["HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement"] }
