[workspace]
members = [
    "verman-core",
    "verman-storage",
    "verman-engine",
    "verman-ui",
    "verman-platform-windows",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["OpenAI Codex"]

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
globset = "0.4"
ignore = "0.4"
jwalk = "0.8"
notify = "8"
rayon = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
slint = "1"
thiserror = "2"
walkdir = "2"
windows = { version = "0.61", features = ["Win32_System_Registry"] }
