[package]
name = "verman-desktop"
version = "0.1.0"
description = "Modern local version manager desktop app"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
chrono = { version = "0.4.42", features = ["serde"] }
ignore = "0.4.24"
rfd = "0.15.4"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.8.5", features = [] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
walkdir = "2.5.0"
