[package]
name = "verman-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
rfd = "0.15"
slint.workspace = true
windows.workspace = true
verman-core = { path = "../verman-core" }
verman-engine = { path = "../verman-engine" }
verman-platform-windows = { path = "../verman-platform-windows" }
